--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "codemirror": "^5.65.16",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
