--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
+    "start:dev": "npm run build && npm run server:dev",
     "dev": "vite",
     "build": "vite build",
     "server:dev": "nodemon server.js",
